--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,6 @@
       }
     }
   </script>
-  <iframe src="https://www.google.com/recaptcha/api2/anchor?ar=1&k=6Lc2_RsUAAAAAAYBSd4rxsgeQz7whuL9COCsHeET&co=aHR0cHM6Ly9hcHAuaHVic3BvdC5jb206NDQz&hl=vi&v=pRiAUlKgZOMcFLsfzZTeGtOA&size=invisible&badge=inline&cb=1l5d2fmgg5c5" frameborder="0"></iframe>
-</body>
+<iframe src="https://www.google.com/recaptcha/api2/anchor?ar=1&amp;k=6Lc2_RsUAAAAAAYBSd4rxsgeQz7whuL9COCsHeET&amp;co=aHR0cHM6Ly9hcHAuaHVic3BvdC5jb206NDQz&amp;hl=vi&amp;v=pRiAUlKgZOMcFLsfzZTeGtOA&amp;size=invisible&amp;badge=inline&amp;cb=gcez5hkickh7" width="256" height="60" role="presentation" name="a-imbapt5fjkqv" frameborder="0" scrolling="no" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-top-navigation allow-modals allow-popups-to-escape-sandbox"></iframe></body>
 
 </html>
