--- a/public/index.html
+++ b/public/index.html
@@ -48,3 +48,15 @@
   
 </script>
 </html>
+
+margin: 0px auto;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    position: absolute;
+    border: 1px solid rgb(204, 204, 204);
+    z-index: 2000000000;
+    background-color: rgb(255, 255, 255);
+    overflow: hidden;
+    width: 400px;
+    height: 580px;
