--- a/public/googleCaptcha.html
+++ b/public/googleCaptcha.html
@@ -35,5 +35,5 @@
 
 </html>
 
-
+position: static; border: none; display: block; overflow: hidden; width: 300px; height: 260px;
 6Lf1RF4aAAAAAJAB7mUAgOxPaRCVNaueNEXB3R2t
